--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -76,12 +76,12 @@ a
 
   ul
     display: flex
-    justify-content: space-around
+    justify-content: space-evenly
     align-items: center
 
     white-space: nowrasp
     list-style-type: none
-    margin-right: 7rem
+    margin-right: 7vw
     height: 100%
 
   li
