--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -11,13 +11,15 @@ html
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
-    script(src="{% static 'js/jquery.min.js' %}")
     script(src="{% static 'js/d3.v5.js' %}")
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     
+    script(src="{% static 'js/jquery.min.js' %}")
+    //-script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+
     script(src="{% static 'js/sweetalert2@11.js' %}")
-    //script(src="sweetalert2/dist/sweetalert2.min.js")
-    //link(rel="stylesheet", href="sweetalert2/dist/sweetalert2.min.css")
+    //-script(src="{% static 'js/sweetalert2@11.js' %}")
+    //-script(src="sweetalert2/dist/sweetalert2.min.js")
+    link(rel="stylesheet", href="sweetalert2/dist/sweetalert2.min.css")
   {% include 'navbar.pug' %}
 
   body
