change load script from "{static/js}" to "http://"

--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -93,3 +93,35 @@
   --border-color-tag2: #75E1C7
   //--border-color-tag3:
   --border-color-button2: #FFAD94
+
+//figma個人資料頁面-編輯顏色中間排的1.2.4個色板
+[data-theme="green"]
+
+  --background-color: #F9F6EC
+  --background-color-navbar: #406726
+  --background-color-userpic: #FFFFFF
+
+  --background-color-button: #406726
+  //--background-color-button-hover: #85F5DA
+  //--background-color-button-disable: #2CBD9A
+
+[data-theme="pink"]
+
+  --background-color: #F9F6EC
+  --background-color-navbar: #EE778A
+  --background-color-userpic: #FFFFFF
+
+  --background-color-button: #4EAF9E
+  //--background-color-button-hover: #85F5DA
+  //--background-color-button-disable: #2CBD9A
+
+
+[data-theme="yellow"]
+
+  --background-color: #FAF7EC
+  --background-color-navbar: #FFBC3B
+  --background-color-userpic: #FFFFFF
+
+  --background-color-button: #FFBC3B
+  //--background-color-button-hover: #85F5DA
+  //--background-color-button-disable: #2CBD9A
