--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -11,13 +11,12 @@ html
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
-    script(src="{% static 'js/d3.v5.js' %}")
-    
-    script(src="{% static 'js/jquery.min.js' %}")
-    //-script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
-
-    script(src="{% static 'js/sweetalert2@11.js' %}")
+    //-script(src="{% static 'js/d3.v5.js' %}")
+    script(src="https://d3js.org/d3.v5.js")
+    //-script(src="{% static 'js/jquery.min.js' %}")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     //-script(src="{% static 'js/sweetalert2@11.js' %}")
+    script(src  ="https://cdn.jsdelivr.net/npm/sweetalert2@11")
     //-script(src="sweetalert2/dist/sweetalert2.min.js")
     link(rel="stylesheet", href="sweetalert2/dist/sweetalert2.min.css")
   {% include 'navbar.pug' %}
@@ -177,11 +176,14 @@ html
       
     .event-detail
       {% include "eventwindow.pug" %}
-        
-      
-    script(src="{% static 'js/jquery-3.2.1.min.js' %}")
-    script(src="{% static 'js/jquery-ui.js' %}")
-    script(src="{% static 'js/semantic.min.js' %}")
+
+
+    //-script(src="{% static 'js/jquery-3.2.1.min.js' %}")    
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+    //-script(src="{% static 'js/jquery-ui.js' %}")
+    script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    //-script(src="{% static 'js/semantic.min.js' %}")
+    script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
     script(src="{% static 'js/homepage.js' %}")
     script(src="{% static 'js/navbar.js' %}")
     script(src="{% static 'js/eventwindow.js' %}")
