--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -11,10 +11,14 @@ html
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
-    script(src="{% static 'js/jquery-3.2.1.min.js' %}")
-    script(src="{% static 'js/jquery-ui.js' %}")
-    script(src="{% static 'js/d3.v5.js' %}")
-    script(src="{% static 'js/sweetalert2@11.js' %}")
+    //-script(src="{% static 'js/jquery-3.2.1.min.js' %}")
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+    //-script(src="{% static 'js/jquery-ui.js' %}")
+    script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    //-script(src="{% static 'js/d3.v5.js' %}")
+    script(src="https://d3js.org/d3.v5.js")
+    //-script(src="{% static 'js/sweetalert2@11.js' %}")
+    script(src  ="https://cdn.jsdelivr.net/npm/sweetalert2@11")
   {% include 'navbar.pug' %}
 
   body
@@ -448,7 +452,9 @@ html
         event_handler("../../event/" + this.closest('.card').id, "{{ request.user.id }}", "{{ csrf_token }}");
       });
 
-    script(src="{% static 'js/semantic.min.js' %}")
+    //-script(src="{% static 'js/semantic.min.js' %}")
+    script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
+    
     script(src="{% static 'js/profile.js' %}")
     script(src="{% static 'js/navbar.js' %}")
     script(src="{% static 'js/eventwindow.js' %}")
