--- a/templates/login.pug
+++ b/templates/login.pug
@@ -10,8 +10,10 @@ html
     link(href="{% sass_src 'sass/login.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
-    script(src="{% static 'js/jquery-3.2.1.min.js' %}")
-    script(src="{% static 'js/jquery-ui.js' %}")
+    //-script(src="{% static 'js/jquery-3.2.1.min.js' %}")
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
+    //-script(src="{% static 'js/jquery-ui.js' %}")
+    script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
   {% include 'navbar.pug' %}
 
   body
@@ -103,6 +105,7 @@ html
         p 加入Connect發起活動與專案，
         p 讓你找到同伴一起完成你想做的事!
     
-    script(src="{% static 'js/semantic.min.js' %}")
+    //-script(src="{% static 'js/semantic.min.js' %}")
+    script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
     script(src="{% static 'js/login.js' %}")
     script(src="{% static 'js/navbar.js' %}")
