check color variabity in every page/ fix navbar align

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -502,14 +502,14 @@
 
       #eventjoinability
         border-radius: 1rem
-        background-color: #F2F2F2
+        background-color: var(--background-color-input)
         margin-bottom: 0.7rem
         width: 100%
         height: 40%
 
       #eventjoinreason
         border-radius: 1rem
-        background-color: #F2F2F2
+        background-color: var(--background-color-input)
         margin-bottom: 0.7rem
         width: 100%
         height: 6rem
