--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -250,7 +250,7 @@ footer
           width: 100%
           padding: 0.7rem 1.5rem 0.3rem 1.5rem
           border-radius: 1.5rem 1.5rem 0 0
-          background-color: var(--background-color-tag1) //var(--background-color-card)
+          background-color: var(--background-color-card)
           height: 5.65rem
           
           
@@ -416,9 +416,9 @@ footer
       width: 5rem
       border-radius: 2.5rem
       border: solid 2px
-      border-color: #CCCCCC
+      //border-color: #CCCCCC
       //#3AEDC2
-      background-color: 
+      //background-color: 
       
     h1
       align-items: center
@@ -498,7 +498,7 @@ footer
     
     select
       background-color: var(--background-color-input)
-      color: var(--fontcolor-placeholder) //var(--fontcolor-placeholder)
+      color: var(--fontcolor-placeholder)
       height: 2rem
       font-size: 1rem
       border-radius: 1rem
