--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -31,7 +31,7 @@
   --font-style-text: normal
   --font-family-card: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
 
-  --fontcolor-reverse: var(--black-1)
+  --fontcolor-reverse: #FFFFFF    //深色底用白字的部份
   --fontcolor-main:  var(--black-1)
   --fontcolor-second: var(--black-3)
   --fontcolor-third: #4F4F4F
@@ -76,12 +76,12 @@
   --background-color-event: #FFE4DC
   --background-color-activity: #FFFFFF
 
-  --background-color-tag1: #FFCFBF        //橘色
+  --background-color-tag1: #FFCFBF        //粉色
   --background-color-tag1-hover: #FFC5B3
-  --background-color-tag2: #75E1C7        //綠色
-  --background-color-tag2-hover: #85F5DA
-  //--background-color-tag3:
-  //--background-color-tag3-hover:
+  --background-color-tag2: #FFCFBF        //粉色
+  --background-color-tag2-hover: #FFC5B3  
+  --background-color-tag3: #75E1C7        //綠色
+  --background-color-tag3-hover: #85F5DA
 
   --background-color-button2: #FDF2EF
   --background-color-button-hover2: #FFC5B2
@@ -90,11 +90,12 @@
 
   --border-color-frame: #FFE4DC
   --border-color-tag1: #FFCFBF
-  --border-color-tag2: #75E1C7
-  //--border-color-tag3:
+  --border-color-tag2: #FFCFBF
+  --border-color-tag3: #75E1C7
   --border-color-button2: #FFAD94
 
 //figma個人資料頁面-編輯顏色中間排的1.2.4個色板
+//**********************
 [data-theme="green"]
 
   --background-color: #F9F6EC
@@ -105,17 +106,79 @@
   //--background-color-button-hover: #85F5DA
   //--background-color-button-disable: #2CBD9A
 
-[data-theme="pink"]
+  //navbar
 
-  --background-color: #F9F6EC
-  --background-color-navbar: #EE778A
+  --fontcolor-navbarbutton: #FFFFFF
+  --background-color-searchbar: #FFFFFF
+
+  //pofile
+
+  --background-color-intro: #FFFFFF
+  --background-color-freind: #FFFFFF
+  --background-color-event: #FFFFFF
+  --background-color-activity: #FFFFFF
+
+  --background-color-tag1: #F2C94C        //黃色
+  --background-color-tag1-hover: #FFC5B3
+  --background-color-tag2: #F2C94C        //黃色
+  --background-color-tag2-hover: #F2C94C
+  --background-color-tag3: #EB5757        //桃紅色
+  --background-color-tag3-hover: #EB5757
+
+  --background-color-button2: #406726       //軍綠色
+  --background-color-button-hover2: #FFC5B2
+  --background-color-button-disable2: #CA8E7C
+
+
+  --border-color-frame: #FFFFFF
+  --border-color-tag1: #F2C94C
+  --border-color-tag2: #F2C94C
+  --border-color-tag3: #EB5757
+  --border-color-button2: #406726
+
+
+//**********************
+[data-theme="red"]
+
+  --background-color: #D7C4BB
+  --background-color-navbar: #B54434
   --background-color-userpic: #FFFFFF
 
   --background-color-button: #4EAF9E
   //--background-color-button-hover: #85F5DA
   //--background-color-button-disable: #2CBD9A
 
+  //navbar
 
+  --fontcolor-navbarbutton: #FFFFFF
+  --background-color-searchbar: #FFFFFF
+
+  //pofile
+
+  --background-color-intro: #FFFFFF
+  --background-color-freind: #FFFFFF
+  --background-color-event: #FFFFFF
+  --background-color-activity: #FFFFFF
+
+  --background-color-tag1: #FADD87        //黃色
+  --background-color-tag1-hover: #FADD87
+  --background-color-tag2: #FADD87        //黃色
+  --background-color-tag2-hover: #FADD87  //桃紅色
+  --background-color-tag3: #E76F6F
+  --background-color-tag3-hover: #E76F6F
+
+  --background-color-button2: #4EAF9E
+  --background-color-button-hover2: #4EAF9E
+  --background-color-button-disable2: #4EAF9E
+
+
+  --border-color-frame: #FFFFFF
+  --border-color-tag1: #FADD87
+  --border-color-tag2: #FADD87
+  --border-color-tag3: #FADD87
+  --border-color-button2: #4EAF9E
+
+//**********************
 [data-theme="yellow"]
 
   --background-color: #FAF7EC
@@ -125,3 +188,33 @@
   --background-color-button: #FFBC3B
   //--background-color-button-hover: #85F5DA
   //--background-color-button-disable: #2CBD9A
+
+  //navbar
+
+  --fontcolor-navbarbutton: #FFFFFF
+  --background-color-searchbar: #FFFFFF
+
+  //pofile
+
+  --background-color-intro: #FFFFFF
+  --background-color-freind: #FFFFFF
+  --background-color-event: #FFF8EF
+  --background-color-activity: #FFFFFF
+
+  --background-color-tag1: #FFCFBF        //黃色
+  --background-color-tag1-hover: #FADD87
+  --background-color-tag2: #FADD87        //黃色
+  --background-color-tag2-hover: #FADD87
+  --background-color-tag3: #80D2C4        //綠色
+  --background-color-tag3-hover: #80D2C4  //綠色
+
+  --background-color-button2: #FFBC3B
+  --background-color-button-hover2: #FFBC3B
+  --background-color-button-disable2: #FFBC3B
+
+
+  --border-color-frame: #FFFFFF
+  --border-color-tag1: #FFCFBF
+  --border-color-tag2: #FFCFBF
+  --border-color-tag3: #80D2C4
+  --border-color-button2: #FFBC3B
