--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -88,7 +88,7 @@ a
     display: block
     float: right
     width: 1.5vw
-    height: 1.5rem
+    height: 2.3rem
 
     white-space: nowrap
     word-break: normal
@@ -164,7 +164,7 @@ a
       /*background-image: url('../file/personalinfoicon.png')
       width: 2rem
       height: 2rem
-      background-color: white
+      background-color: var(--background-color-userpic)
       border-radius: 50%
       border: solid var(--border-color-userpic) 0.15rem
       #userpic
@@ -228,7 +228,7 @@ a
             height: 2.5rem
             width: 2.5rem
             border-radius: 50%
-            background-color: white
+            background-color: var(--background-color-userpic)
         
           #notice-right
             display: flex
@@ -292,7 +292,7 @@ a
   //color: rgba(0, 0, 0, 1)
   cursor: pointer
   z-index: 5
-  text-align: center
+  //text-align: center
 
 //#gotop:hover
   //opacity: 0.65
