--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -21,7 +21,7 @@ html
     script(src="{% static 'js/homepage.js' %}")
     script(src="{% static 'js/navbar.js' %}")
     script(src="{% static 'js/eventwindow.js' %}")
-    link(rel="stylesheet", href="sweetalert2/dist/sweetalert2.min.css")
+    //link(rel="stylesheet", href="sweetalert2/dist/sweetalert2.min.css")
   {% include 'navbar.pug' %}
 
   body
