--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -93,7 +93,9 @@ header
           }
       li 
         a#message.button(href="#" title="功能開發中")
-        #message-hover.hover 訊息
+        #message-hover.hover 功能開發中
+        //
+          訊息
       li
         a#aboutus.button(href="/about_us" title="about us")
         #aboutus-hover.hover 關於我們
