--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -273,6 +273,18 @@
           padding: 0.4rem 1.3rem 0.4rem 1rem
           font-size: 1.1rem
         
+        input
+          //position: absolute
+          right: 0
+          //transform: translateX(3.5rem)
+          outline: none
+          border: none
+          border-radius: 3rem
+          background-color: var(--border-color-eventwindow)
+          padding: 0.5rem 1rem
+          font-size: 1rem
+          cursor: pointer
+          
         .eventmsg-btn
           //position: absolute
           //right: 0
@@ -285,28 +297,7 @@
           font-size: 1rem
           cursor: pointer
 
-        .eventjoin-btn
-          //position: absolute
-          right: 0
-          //transform: translateX(3.5rem)
-          outline: none
-          border: none
-          border-radius: 3rem
-          background-color: var(--border-color-eventwindow)
-          padding: 0.5rem 1rem
-          font-size: 1rem
-          cursor: pointer
-        .eventedit-btn
-          //position: absolute
-          right: 0
-          //transform: translateX(3.5rem)
-          outline: none
-          border: none
-          border-radius: 3rem
-          background-color: var(--border-color-eventwindow)
-          padding: 0.5rem 1rem
-          font-size: 1rem
-          cursor: pointer
+        
       
   
   #eventwindow-right
@@ -532,6 +523,27 @@
         border: none
       
   #eventcontrol
+    .eventcontainer
+      display: flex
+      flex-direction: row;
+      align-items: center
+      flex-wrap: nowrap
+      justify-content: space-evenly;
+      width: 70%
+      height: 100%
+      position: absolute
+      left: 50%
+      transform: translate(-50%, 0)
+      
+      input
+        border-radius: 3rem
+        background-color: var(--border-color-eventwindow)
+        cursor: pointer
+        font-size: 1rem
+        width: 5rem;
+        height: 2.5rem;
+        outline: none
+        border: none
   
 
 #filter1
