add select UI to navbar searchbox

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -272,6 +272,7 @@
           background-color: var(--background-color-input)
           padding: 0.4rem 1.3rem 0.4rem 1rem
           font-size: 1.1rem
+          cursor: text
         
         input
           //position: absolute
