--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -65,13 +65,19 @@ a
     position: relative
     input
       height: 2.2rem
-      width: 30vw
+      width: calc( 30vw - 4rem);
       border-radius: 1rem
       border: none
       outline: none
       margin-top: 0.25rem
       background-color: var(--background-color-searchbar)
-      padding-left: 1rem
+      padding: 0 4.5rem 0 1.3rem;
+    select
+      background: transparent
+      outline: none
+      border: none
+      transform: translate(-120%, 0)
+      color: #333333
     
 
   ul
