--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -446,7 +446,7 @@
       align-items: center
       flex-wrap: nowrap
       justify-content: space-evenly;
-      width: 70%
+      width: 100%
       height: 100%
       position: absolute
       left: 50%
@@ -526,15 +526,73 @@
   #eventcontrol
     .eventcontainer
       display: flex
-      flex-direction: row;
+      flex-direction: column
       align-items: center
       flex-wrap: nowrap
       justify-content: space-evenly;
-      width: 70%
+      width: 100%
       height: 100%
       position: absolute
       left: 50%
       transform: translate(-50%, 0)
+      
+      #member-control-list
+        display: flex
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: flex-start;
+        max-height: 55%;
+        overflow: auto;
+        width: 85%
+        background-color: #CCCCCC
+        border-radius: 1rem
+        
+      
+        #member-profile
+          display: flex
+          flex-direction: row;
+          flex-wrap: nowrap;
+          align-items: center;
+          align-content: flex-start;
+          justify-content: flex-start;
+          width: 95%
+          background-color: #EEEEEE
+          margin: 0.3rem 0
+          border-radius: 1rem
+          
+          #member-profile-left
+            display: flex
+            flex-direction: row;
+            flex-wrap: nowrap;
+            align-items: center;
+            width: 30%
+            
+            img
+              width: 3.5rem
+              height: 3.5rem
+              border-radius: 50%
+              border: solid 2px #DDDDDD
+            
+            #member-detail
+              display: flex
+              flex-direction: column;
+              align-items: flex-start;
+              justify-content: center;
+              p
+                font-size: 0.7rem
+                font-weight: 700
+                
+          #member-profile-right
+            display: flex
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-items: flex-start;
+            justify-content: flex-start;
+            width: 70%
+            p
+              font-size: 0.8rem
+          
       
       input
         border-radius: 3rem
