--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -143,6 +143,42 @@ html
       #eventcontrol.eventsubwindow
         img#exitbtn4.exitbtn(src="{% static 'file/exiticon.png' %}")
         .eventcontainer
+          t1 參與人
+          p 報名申請
+          #member-control-list
+            #member-profile
+              #member-profile-left
+                img
+                #member-detail
+                  p 姓名
+                  p 電機系大三
+                  p 參與過15個活動
+              #member-profile-right
+                p 具備能力：
+                p 加入理由：
+                p 已加入
+            #member-profile
+              #member-profile-left
+                img
+                #member-detail
+                  p 姓名
+                  p 電機系大三
+                  p 參與過15個活動
+              #member-profile-right
+                p 具備能力：
+                p 加入理由：
+                p 已加入
+            #member-profile
+              #member-profile-left
+                img
+                #member-detail
+                  p 姓名
+                  p 電機系大三
+                  p 參與過15個活動
+              #member-profile-right
+                p 具備能力：
+                p 加入理由：
+                p 已加入
           input#edit-btn(type="button", value="編輯活動")
           input#delete-btn(type="button", value="刪除活動")
 
