add some log to aboutus page

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -83,7 +83,7 @@ a
   height: 50vh
   
 .logs
-  width: 50%
+  width: 60%
   display: flex
   flex-direction: column;
   flex-wrap: nowrap;
@@ -211,11 +211,14 @@ a
 .description
   font-size: 18px
   padding-right: 10%
+  text-align: left
 
 .hidden-description
   position: absolute
   bottom: 0
   padding-bottom: 1vh
+  
+  
 
 @media only screen and (max-width: 1370px)
   /* display on phone
