--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -615,7 +615,7 @@ footer
         font-size: 1.3rem
         border: none
         background-color: transparent
-        padding: 0 calc(90vm / 3)
+        padding: 0 3.5vw
       *:hover
         position: relative
         transform: scale(1.02)
