--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -210,7 +210,7 @@ html
                       .info-brief-school
                         p {{ friend.userextend.department }}
                         p {{ friend.userextend.grade }}
-                        p 0位共同連結
+                        p n 位共同連結
                   {% if friend_connect %}
                   p {{ friend.last_name }} 與他一起參與過 {{ friend_connect }} 個活動
                   //{{ user.user.last_name }}
